--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -122,7 +122,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="document_browser">Przeglądarka dokumentów</string>
     <string name="file_browser">Menedżer plików</string>
     <string name="set_due_date">Ustaw termin</string>
-    <string name="insert_replace_date">Insert date</string>
+    <string name="insert_replace_date">Wstaw datę</string>
     <string name="create_note" needed="false">Utwórz notatkę</string>
     <string name="special_documents" needed="false">Specjalne dokumenty</string>
     <string name="keep_screen_on" needed="false">Pozostaw ekran włączony</string>
@@ -190,7 +190,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="unordered_list_char_dash">Myślnik (-)</string>
     <string name="unordered_list_char_asterisk">Asterisk (*)</string>
     <string name="unordered_list_char_plus">Plus (+)</string>
-    <string name="filemanager_doesnot_supply_required_data__appspecific">Markor może tylko edytować zapisane lokalnie, dostępne offline pliki oraz nie wspiera menedżerów plików, które nie zapewniają pełnej ścieżki pliku.</string>
+    <string name="filemanager_doesnot_supply_required_data__appspecific">Markor może edytować tylko pliki dostępne lokalnie, offline oraz nie wspiera menedżerów plików, które nie zapewniają pełnej ścieżki pliku.</string>
     <string name="sync_to_local_folder_notice">Uwaga: Aplikacje synchronizujące mogą zapisywać pliki w niestandardowych folderach. Otwórz je zmieniając folder dokumentów Markora, lub używając innego menedżera plików.</string>
     <string name="configure_in_the_apps_settings">Konfiguruj w ustawieniach aplikacji</string>
     <string name="vertical_alignment">Wyrównanie w pionie</string>
@@ -255,7 +255,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="preset">Gotowe ustawienia</string>
     <string name="foreground">Pierwszy plan</string>
     <string name="background">Tło</string>
-    <string name="set_foreground_or_background_color_hexcolor_also_possible">Ustaw kolor pierwszego lub tła tekstu? Wstawianie kodu koloru szesnastkowego jest również możliwe.</string>
+    <string name="set_foreground_or_background_color_hexcolor_also_possible">Ustawić kolor pierwszego planu lub tła tekstu? Można podać kolor w systemie szesnastkowym.</string>
     <string name="type">Rodzaj</string>
     <string name="folder">Katalog</string>
     <string name="folder_is_created_without_extension">- Katalog jest tworzony bez rozszerzenia pliku</string>
