--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -286,10 +286,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="appdata_private">Dane aplikacji (prywatne)</string>
     <string name="appdata_sdcard">AppData (karta SD)</string>
     <string name="internal_storage">Pamięć wewnętrzna</string>
-    <string name="open_the_document_from_main_view">Możesz otworzyć dokument z widoku głównego na dole, w przeglądarce plików lub w launcherze. Istnieje również możliwość dodawania tekstu do Markor.</string>
+    <string name="open_the_document_from_main_view">Możesz otworzyć dokument z widoku głównego aplikacji, w przeglądarce plików lub w launcherze. Istnieje również możliwość udostępnienia tekstu do Markor.</string>
     <string name="notebook_is_the_home_of_your_files">Notatnik jest katalogiem, który Markor ładuje w przeglądarce plików po uruchomieniu aplikacji. To jest folder domowy Twoich plików.</string>
     <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote to najszybsza opcja zapisywania notatek. Jest to plik w formacie Markdown z domyślną lokalizacją &gt;Notatnik/QuickNote. d&lt;, możesz ustawić niestandardową ścieżkę plików w ustawieniach.</string>
-    <string name="todo_is_the_easiest_way_">Zarządzaj zadaniami za pomocą ToDo. Jest to plik w formacie todo.txt z domyślną lokalizacją &gt;Notebook/todo. xt&lt;, możesz ustawić niestandardową ścieżkę plików w ustawieniach.</string>
+    <string name="todo_is_the_easiest_way_">Zarządzaj zadaniami za pomocą ToDo. Jest to plik w formacie todo.txt z domyślną lokalizacją &gt;Notebook/todo. xt&lt;, możesz ustawić własną ścieżkę plików w ustawieniach.</string>
     <string name="navigationbar_color">Kolor paska nawigacji</string>
     <string name="black">Czarny</string>
     <string name="white">Biały</string>
@@ -305,7 +305,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="app_start_folder">Folder startowy aplikacji</string>
     <string name="tab_width">Szerokość tabulatora</string>
     <string name="amount_of_space_for_tab">Ilość spacji za tabulator</string>
-    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">Wybrany plik może być zwykłym plikiem tekstowym. Chcesz go edytować, czy użyć innej aplikacji?\n\nNie próbuj otwierać plików binarnych. Jeśli nie jesteś pewien, otwórz za pomocą innej aplikacji.</string>
+    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">Wybrany plik może być zwykłym plikiem tekstowym. Chcesz go edytować, czy użyć innej aplikacji?\n\nNie próbuj otwierać plików binarnych. Jeśli nie jesteś pewien, użyj innej aplikacji.</string>
     <string name="list_in_recent_files">Lista w ostatnich plikach</string>
     <string name="reload">Przeładuj</string>
     <string name="wrap_words">Zawijanie słów</string>
@@ -340,12 +340,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="jump_to_bottom">Skocz do dołu</string>
     <string name="quote">Cytat</string>
     <string name="heading">Nagłówek</string>
-    <string name="heading_1">Poziom 1</string>
-    <string name="heading_2">Poziom 2</string>
-    <string name="heading_3">Poziom 3</string>
-    <string name="heading_4">Poziom 4</string>
-    <string name="heading_5">Poziom 5</string>
-    <string name="heading_6">Poziom 6</string>
+    <string name="heading_1">Nagłówek 1</string>
+    <string name="heading_2">Nagłówek 2</string>
+    <string name="heading_3">Nagłówek 3</string>
+    <string name="heading_4">Nagłówek 4</string>
+    <string name="heading_5">Nagłówek 5</string>
+    <string name="heading_6">Nagłówek 6</string>
     <string name="bold">Pogrubiony</string>
     <string name="italic">Kursywa</string>
     <string name="highlighted">Wyróżniony</string>
@@ -363,11 +363,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="selected">Wybrane</string>
     <string name="back">Powrót</string>
     <string name="expand_collapse">Rozwiń / Zwiń</string>
-    <string name="essential">Zasadnicze</string>
+    <string name="essential">Pozostałe</string>
     <string name="append_human_readable_uuid_to_new_tasks">Dołącz czytelny dla człowieka UUID do nowych zadań</string>
-    <string name="action_order">Kolejność działań</string>
+    <string name="action_order">Kolejność przycisków</string>
     <string name="toggle_action_visibility">Przełącz widoczność akcji</string>
-    <string name="load_default_settings">Załaduj domyślne ustawienia</string>
+    <string name="load_default_settings">Przywróć domyślne ustawienia</string>
     <string name="drag">Przeciągnij</string>
     <string name="created">Utworzono</string>
     <string name="file_encryption_password">Hasło szyfrowania plików</string>
@@ -381,7 +381,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="add_completion_date_for_todos_when_marking_them_as_done">Dodaj datę zakończenia dla zadań przy oznaczaniu ich jako wykonane</string>
     <string name="file_description_format">Format opisu pliku</string>
     <string name="file_description_format_dialog">Format opisu w każdej przeglądarce plików. Postępuje zgodnie z regułami SimpleDateFormat Androida, z dodatkiem FS do pokazywania rozmiaru pliku. Pozostaw puste, aby użyć domyślnego formatu dla swojego języka.\n\nPrzykładowe wejście:\nFS yyyy MMM dd hh:mm:ss aa\nFormat wyjściowy:\n30KB 2020 Mar 20 11:24:52 PM</string>
-    <string name="loading_default_value">Wczytywanie wartości domyślnej</string>
+    <string name="loading_default_value">Wczytywanie domyślnych wartości</string>
     <string name="file_settings">Ustawienia pliku</string>
     <string name="search_and_replace">Szukaj / Zamień</string>
     <string name="search_for">Szukaj</string>
