--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -48,7 +48,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="html_as_plaintext">HTML (jako czysty tekst)</string>
     <string name="document_editor_font">Czcionka edytora</string>
     <string name="theme">Motyw</string>
-    <string name="open_existing_files_in_view_mode">Otwórz istniejące pliki w trybie widoku</string>
+    <string name="open_existing_files_in_view_mode">Otwórz istniejące pliki w trybie podglądu</string>
     <string name="about">Informacje</string>
     <string name="plaintext">Zwykły tekst</string>
     <string name="file">Plik</string>
@@ -162,7 +162,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">Podświetlaj spacje na końcu lini zawierające dwie lub więcej spacji</string>
     <string name="use_monospace_for_code">Użyj czionki monospace dla kodu</string>
     <string name="disable_code_block_highlight">Wyłącz podświetlanie bloków kodu</string>
-    <string name="auto_renumber_ordered_list">Automatycznie zmieniaj numerację list uporządkowanych</string>
+    <string name="auto_renumber_ordered_list">Automatyczna numeracja list uporządkowanych</string>
     <string name="auto_renumber_ordered_list_slowdown">Ta opcja może mieć wpływ na wydajność aplikacji.</string>
     <string name="use_different_fonttype_slow_down">Użyj innego rodzaju czcionki. Dynamiczne zmienianie rodzaju czcionki ma wpływ na wydajność aplikacji.</string>
     <string name="general">Ogólne</string>
@@ -186,7 +186,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="start_on_bottom">Zacznij od dołu</string>
     <string name="start_on_bottom_when_loading_document">Po załadowaniu dokumentu ustaw kursor na jego końcu</string>
     <string name="unordered_list_character">Znak listy nieuporządkowanej</string>
-    <string name="character_to_start_items_of_unordered_list_with">Który znak ma być użyty do oznaczenia nieuporządkowanych list</string>
+    <string name="character_to_start_items_of_unordered_list_with">Znak wypunktowania do oznaczenia nieuporządkowanych list</string>
     <string name="unordered_list_char_dash">Myślnik (-)</string>
     <string name="unordered_list_char_asterisk">Asterisk (*)</string>
     <string name="unordered_list_char_plus">Plus (+)</string>
