--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -48,7 +48,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="html_as_plaintext">HTML (jako czysty tekst)</string>
     <string name="document_editor_font">Czcionka edytora</string>
     <string name="theme">Motyw</string>
-    <string name="open_existing_files_in_view_mode">Otwórz istniejące pliki w trybie widoku</string>
+    <string name="open_existing_files_in_view_mode">Otwórz istniejące pliki w trybie podglądu</string>
     <string name="about">Informacje</string>
     <string name="plaintext">Zwykły tekst</string>
     <string name="file">Plik</string>
@@ -122,7 +122,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="document_browser">Przeglądarka dokumentów</string>
     <string name="file_browser">Menedżer plików</string>
     <string name="set_due_date">Ustaw termin</string>
-    <string name="insert_replace_date">Insert date</string>
+    <string name="insert_replace_date">Wstaw datę</string>
     <string name="create_note" needed="false">Utwórz notatkę</string>
     <string name="special_documents" needed="false">Specjalne dokumenty</string>
     <string name="keep_screen_on" needed="false">Pozostaw ekran włączony</string>
@@ -162,7 +162,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">Podświetlaj spacje na końcu lini zawierające dwie lub więcej spacji</string>
     <string name="use_monospace_for_code">Użyj czionki monospace dla kodu</string>
     <string name="disable_code_block_highlight">Wyłącz podświetlanie bloków kodu</string>
-    <string name="auto_renumber_ordered_list">Automatycznie zmieniaj numerację list uporządkowanych</string>
+    <string name="auto_renumber_ordered_list">Automatyczna numeracja list uporządkowanych</string>
     <string name="auto_renumber_ordered_list_slowdown">Ta opcja może mieć wpływ na wydajność aplikacji.</string>
     <string name="use_different_fonttype_slow_down">Użyj innego rodzaju czcionki. Dynamiczne zmienianie rodzaju czcionki ma wpływ na wydajność aplikacji.</string>
     <string name="general">Ogólne</string>
@@ -185,12 +185,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_tab">Tabulator</string>
     <string name="start_on_bottom">Zacznij od dołu</string>
     <string name="start_on_bottom_when_loading_document">Po załadowaniu dokumentu ustaw kursor na jego końcu</string>
-    <string name="unordered_list_character">Nieuporządkowany znak z listy</string>
-    <string name="character_to_start_items_of_unordered_list_with">Który znak ma być użyty do oznaczenia nieuporządkowanych list</string>
+    <string name="unordered_list_character">Znak listy nieuporządkowanej</string>
+    <string name="character_to_start_items_of_unordered_list_with">Znak wypunktowania do oznaczenia nieuporządkowanych list</string>
     <string name="unordered_list_char_dash">Myślnik (-)</string>
     <string name="unordered_list_char_asterisk">Asterisk (*)</string>
     <string name="unordered_list_char_plus">Plus (+)</string>
-    <string name="filemanager_doesnot_supply_required_data__appspecific">Markor może tylko edytować zapisane lokalnie, dostępne offline pliki oraz nie wspiera menedżerów plików, które nie zapewniają pełnej ścieżki pliku.</string>
+    <string name="filemanager_doesnot_supply_required_data__appspecific">Markor może edytować tylko pliki dostępne lokalnie, offline oraz nie wspiera menedżerów plików, które nie zapewniają pełnej ścieżki pliku.</string>
     <string name="sync_to_local_folder_notice">Uwaga: Aplikacje synchronizujące mogą zapisywać pliki w niestandardowych folderach. Otwórz je zmieniając folder dokumentów Markora, lub używając innego menedżera plików.</string>
     <string name="configure_in_the_apps_settings">Konfiguruj w ustawieniach aplikacji</string>
     <string name="vertical_alignment">Wyrównanie w pionie</string>
@@ -255,7 +255,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="preset">Gotowe ustawienia</string>
     <string name="foreground">Pierwszy plan</string>
     <string name="background">Tło</string>
-    <string name="set_foreground_or_background_color_hexcolor_also_possible">Ustaw kolor pierwszego lub tła tekstu? Wstawianie kodu koloru szesnastkowego jest również możliwe.</string>
+    <string name="set_foreground_or_background_color_hexcolor_also_possible">Ustawić kolor pierwszego planu lub tła tekstu? Można podać kolor w systemie szesnastkowym.</string>
     <string name="type">Rodzaj</string>
     <string name="folder">Katalog</string>
     <string name="folder_is_created_without_extension">- Katalog jest tworzony bez rozszerzenia pliku</string>
@@ -286,10 +286,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="appdata_private">Dane aplikacji (prywatne)</string>
     <string name="appdata_sdcard">AppData (karta SD)</string>
     <string name="internal_storage">Pamięć wewnętrzna</string>
-    <string name="open_the_document_from_main_view">Możesz otworzyć dokument z widoku głównego na dole, w przeglądarce plików lub w launcherze. Istnieje również możliwość dodawania tekstu do Markor.</string>
+    <string name="open_the_document_from_main_view">Możesz otworzyć dokument z widoku głównego aplikacji, w przeglądarce plików lub w launcherze. Istnieje również możliwość udostępnienia tekstu do Markor.</string>
     <string name="notebook_is_the_home_of_your_files">Notatnik jest katalogiem, który Markor ładuje w przeglądarce plików po uruchomieniu aplikacji. To jest folder domowy Twoich plików.</string>
     <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote to najszybsza opcja zapisywania notatek. Jest to plik w formacie Markdown z domyślną lokalizacją &gt;Notatnik/QuickNote. d&lt;, możesz ustawić niestandardową ścieżkę plików w ustawieniach.</string>
-    <string name="todo_is_the_easiest_way_">Zarządzaj zadaniami za pomocą ToDo. Jest to plik w formacie todo.txt z domyślną lokalizacją &gt;Notebook/todo. xt&lt;, możesz ustawić niestandardową ścieżkę plików w ustawieniach.</string>
+    <string name="todo_is_the_easiest_way_">Zarządzaj zadaniami za pomocą ToDo. Jest to plik w formacie todo.txt z domyślną lokalizacją &gt;Notebook/todo. xt&lt;, możesz ustawić własną ścieżkę plików w ustawieniach.</string>
     <string name="navigationbar_color">Kolor paska nawigacji</string>
     <string name="black">Czarny</string>
     <string name="white">Biały</string>
@@ -305,7 +305,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="app_start_folder">Folder startowy aplikacji</string>
     <string name="tab_width">Szerokość tabulatora</string>
     <string name="amount_of_space_for_tab">Ilość spacji za tabulator</string>
-    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">Wybrany plik może być zwykłym plikiem tekstowym. Czy chcesz otworzyć go w edytorze czy w innej aplikacji?\n\nNie próbuj otwierać plików binarnych. Jeśli nie jesteś pewien, otwórz za pomocą innej aplikacji.</string>
+    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">Wybrany plik może być zwykłym plikiem tekstowym. Chcesz go edytować, czy użyć innej aplikacji?\n\nNie próbuj otwierać plików binarnych. Jeśli nie jesteś pewien, użyj innej aplikacji.</string>
     <string name="list_in_recent_files">Lista w ostatnich plikach</string>
     <string name="reload">Przeładuj</string>
     <string name="wrap_words">Zawijanie słów</string>
@@ -330,7 +330,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="table">Tablica</string>
     <string name="how_much_columns_press_table_button_long_to_start_table">Ile kolumn? Naciśnij przycisk tabeli, aby rozpocząć tabelę (wstaw nagłówek), naciśnij krótki, aby dodać wiersz.</string>
     <string name="example_of_a_markdown_table">Przykład tabeli Markdown</string>
-    <string name="delete_lines">Usuń linie</string>
+    <string name="delete_lines">Usuń linijkę</string>
     <string name="unordered_list">Lista nieuporządkowana</string>
     <string name="ordered_list">Lista uporządkowana</string>
     <string name="check_list">Lista kontrolna</string>
@@ -340,12 +340,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="jump_to_bottom">Skocz do dołu</string>
     <string name="quote">Cytat</string>
     <string name="heading">Nagłówek</string>
-    <string name="heading_1">Poziom 1</string>
-    <string name="heading_2">Poziom 2</string>
-    <string name="heading_3">Poziom 3</string>
-    <string name="heading_4">Poziom 4</string>
-    <string name="heading_5">Poziom 5</string>
-    <string name="heading_6">Poziom 6</string>
+    <string name="heading_1">Nagłówek 1</string>
+    <string name="heading_2">Nagłówek 2</string>
+    <string name="heading_3">Nagłówek 3</string>
+    <string name="heading_4">Nagłówek 4</string>
+    <string name="heading_5">Nagłówek 5</string>
+    <string name="heading_6">Nagłówek 6</string>
     <string name="bold">Pogrubiony</string>
     <string name="italic">Kursywa</string>
     <string name="highlighted">Wyróżniony</string>
@@ -363,11 +363,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="selected">Wybrane</string>
     <string name="back">Powrót</string>
     <string name="expand_collapse">Rozwiń / Zwiń</string>
-    <string name="essential">Zasadnicze</string>
+    <string name="essential">Pozostałe</string>
     <string name="append_human_readable_uuid_to_new_tasks">Dołącz czytelny dla człowieka UUID do nowych zadań</string>
-    <string name="action_order">Kolejność działań</string>
+    <string name="action_order">Kolejność przycisków</string>
     <string name="toggle_action_visibility">Przełącz widoczność akcji</string>
-    <string name="load_default_settings">Załaduj domyślne ustawienia</string>
+    <string name="load_default_settings">Przywróć domyślne ustawienia</string>
     <string name="drag">Przeciągnij</string>
     <string name="created">Utworzono</string>
     <string name="file_encryption_password">Hasło szyfrowania plików</string>
@@ -381,7 +381,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="add_completion_date_for_todos_when_marking_them_as_done">Dodaj datę zakończenia dla zadań przy oznaczaniu ich jako wykonane</string>
     <string name="file_description_format">Format opisu pliku</string>
     <string name="file_description_format_dialog">Format opisu w każdej przeglądarce plików. Postępuje zgodnie z regułami SimpleDateFormat Androida, z dodatkiem FS do pokazywania rozmiaru pliku. Pozostaw puste, aby użyć domyślnego formatu dla swojego języka.\n\nPrzykładowe wejście:\nFS yyyy MMM dd hh:mm:ss aa\nFormat wyjściowy:\n30KB 2020 Mar 20 11:24:52 PM</string>
-    <string name="loading_default_value">Wczytywanie wartości domyślnej</string>
+    <string name="loading_default_value">Wczytywanie domyślnych wartości</string>
     <string name="file_settings">Ustawienia pliku</string>
     <string name="search_and_replace">Szukaj / Zamień</string>
     <string name="search_for">Szukaj</string>
@@ -397,13 +397,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Importuj ustawienia z kopii zapasowej pliku json. Po pomyślnym uruchomieniu aplikacji.</string>
     <string name="failed_to_restore_settings_from_backup">Nie udało się przywrócić ustawień z kopii zapasowej</string>
     <string name="newline_is_new_paragraph">Nowa linia = nowy ustęp</string>
-    <string name="search_in_content">Szukaj w treści</string>
+    <string name="search_in_content">Szukaj w zawartości</string>
     <string name="max_search_depth">Głębokość wyszukiwania</string>
     <string name="ignore_list">Ignoruj listę</string>
     <string name="do_not_search_specified_files_and_folders">Nie szukaj określonych plików i folderów.\nUżyj nowej linii jako separatora.\nUżyj cytatów dla dokładnych nazw dirów: \"Test\".\nlub użyj Regex \'^[.].*\'\nPrzykłady: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
     <string name="regex_search">Wyszukiwanie Regex</string>
-    <string name="case_sensitive">Rozróżniana przez litery</string>
-    <string name="stop_search_after_first_match">Zatrzymaj wyszukiwanie po pierwszym meczu</string>
+    <string name="case_sensitive">Rozróżniaj wielkość liter</string>
+    <string name="stop_search_after_first_match">Zatrzymaj wyszukiwanie po pierwszym dopasowaniu</string>
     <string name="regex_can_not_be_compiled">Regex nie może być skompilowany</string>
     <string name="keep_both">Zachowaj oba</string>
     <string name="skip">Pomiń</string>
