--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -116,7 +116,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="refresh">Odśwież</string>
     <string name="create_shortcut">Utwórz skrót</string>
     <string name="tried_to_create_shortcut_for_this_notice">Próbowałem dodać skrót do ekranu głównego do edycji tego dokumentu. Pamiętaj, że niektóre programy uruchamiające mogą tego nie obsługiwać.</string>
-    <string name="file_not_in_save_path_do_import_notice__appspecific">Wybrany plik nie znajduje się w folderze notatnika aplikacji. Czy chciałbyś skopiować go do obecnego folderu? To spowoduje nadpisanie wszystkich plików z taką samą nazwą.</string>
+    <string name="file_not_in_save_path_do_import_notice__appspecific">Wybrany plik znajduje się poza folderem notatek. Czy chciałbyś skopiować go do obecnego folderu? To nadpisze plik z taką samą nazwą.</string>
     <string name="file_not_in_current_folder_do_copy__appspecific">Plik nie jest zlokalizowany w bieżącym folderze. Czy chcesz skopiować go do bieżącego folderu? Spowoduje to nadpisanie istniejącego pliku o tej samej nazwie.</string>
     <string name="files_and_folders">Pliki i foldery</string>
     <string name="document_browser">Przeglądarka dokumentów</string>
@@ -149,14 +149,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="none">Nic</string>
     <string name="other">Inne</string>
     <string name="empty_file">Pusty plik</string>
-    <string name="break_page_pdf_print">Strona przerwania (PDF/Drukuj)</string>
+    <string name="break_page_pdf_print">Podział strony (PDF/drukowanie)</string>
     <string name="underline">Podkreślenie</string>
     <string name="underline_hex_color_wether_or_not_to_description__appspecific">Określa, czy należy podświetlać kody kolorów heksadecymalnych w zależności od koloru</string>
     <string name="underline_hex_color_codes">Podkreślaj kolory w układzie szesnastkowym (Hex)</string>
     <string name="insert_current_date_when_starting_new_task">Wstawianie bieżącej daty podczas uruchamiania nowego zadania</string>
     <string name="tasks_with_todays_date">Zadania z dzisiejszą datą</string>
     <string name="append_contexts_and_projects">Dodaj konteksty i projekty</string>
-    <string name="append_contexts_and_projects_on_end_of_task">Dołącz kontekst i projekty na końcu zadania przy użyciu odpowiedniej akcji tekstowej</string>
+    <string name="append_contexts_and_projects_on_end_of_task">Dołącz konteksty i projekty na końcu zadania przy użyciu odpowiedniej akcji tekstu</string>
     <string name="rtl_rendering">Renderowanie RTL</string>
     <string name="highlight_line_ending">Podświetl zakończenie linii</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">Podświetlaj spacje na końcu lini zawierające dwie lub więcej spacji</string>
@@ -175,7 +175,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_up">Strona w górę (Page Up)</string>
     <string name="key_page_down">Strona w dół (Page Down)</string>
     <string name="move_text_one_line_up">Przenieś tekst o jedną linię w górę</string>
-    <string name="move_text_one_line_down">Przesuń tekst o jedną linię w dół</string>
+    <string name="move_text_one_line_down">Przenieś tekst o jedną linię w dół</string>
     <string name="start_new_line_below">Rozpocznij nową linię poniżej</string>
     <string name="key_pos_1">Początek Linii (Pos Home)</string>
     <string name="key_pos_end">Koniec Linii (Pos End)</string>
