--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -39,7 +39,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">Udostępnij do&#8230;</string>
     <string name="share">Udostępnij</string>
     <string name="search">Szukaj</string>
-    <string name="display_converted_markup">Wyświetl znaczniki markup</string>
+    <string name="display_converted_markup">Wyświetlanie znaczników markup</string>
     <string name="editor">Edytor</string>
     <string name="folders">Foldery</string>
     <string name="files">Pliki</string>
@@ -287,8 +287,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="appdata_sdcard">AppData (karta SD)</string>
     <string name="internal_storage">Pamięć wewnętrzna</string>
     <string name="open_the_document_from_main_view">Możesz otworzyć dokument z widoku głównego aplikacji, w przeglądarce plików lub w launcherze. Istnieje również możliwość udostępnienia tekstu do Markor.</string>
-    <string name="notebook_is_the_home_of_your_files">Notatnik jest katalogiem, który Markor ładuje w przeglądarce plików po uruchomieniu aplikacji. To jest folder domowy Twoich plików.</string>
-    <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote to najszybsza możliwość robienia notatek. Jest to plik w formacie Markdown z domyślną lokalizacją &gt;Notatnik/QuickNote.md&lt;. Możesz wybrać własną lokalizację w ustawieniach.</string>
+    <string name="notebook_is_the_home_of_your_files">Notatki to katalog, który Markor ładuje w przeglądarce plików po uruchomieniu aplikacji. To domyślny folder dla Twoich plików.</string>
+    <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote to najszybsza możliwość robienia notatek. Jest to plik w formacie Markdown z domyślną lokalizacją &gt;Notatki/QuickNote.md&lt;. Możesz wybrać własną lokalizację w ustawieniach.</string>
     <string name="todo_is_the_easiest_way_">Zarządzaj zadaniami za pomocą ToDo. Jest to plik w formacie todo.txt z domyślną lokalizacją &gt;Notebook/todo. xt&lt;, możesz ustawić własną ścieżkę plików w ustawieniach.</string>
     <string name="navigationbar_color">Kolor paska nawigacji</string>
     <string name="black">Czarny</string>
@@ -398,7 +398,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="failed_to_restore_settings_from_backup">Nie udało się przywrócić ustawień z kopii zapasowej</string>
     <string name="newline_is_new_paragraph">Nowa linia = nowy ustęp</string>
     <string name="search_in_content">Szukaj w zawartości</string>
-    <string name="max_search_depth">Głębokość wyszukiwania</string>
+    <string name="max_search_depth">Zasięg wyszukiwania</string>
     <string name="ignore_list">Ignoruj listę</string>
     <string name="do_not_search_specified_files_and_folders">Nie szukaj określonych plików i folderów.\nUżyj nowej linii jako separatora.\nUżyj cytatów dla dokładnych nazw dirów: \"Test\".\nlub użyj Regex \'^[.].*\'\nPrzykłady: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
     <string name="regex_search">Wyszukiwanie Regex</string>
