[ci skip] Update translations (Italian)

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -378,19 +378,19 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="password_already_set_setting_a_new_password_will_overwrite">Password già impostata. Impostare una nuova password sovrascriverà la password esistente e potresti non essere più in grado di accedere ai file nel caso in cui dimentichi la password.</string>
     <string name="code_block">Blocco di codice</string>
     <string name="add_completion_date">Aggiungi data di completamento</string>
-    <string name="add_completion_date_for_todos_when_marking_them_as_done">Aggiungi data di completamento per i todo quando contrassegnati come completati</string>
+    <string name="add_completion_date_for_todos_when_marking_them_as_done">Aggiungi data di completamento per i \"Da fare\" quando contrassegnati come completati</string>
     <string name="file_description_format">Formato descrizione file</string>
     <string name="file_description_format_dialog">Formato per la descrizione sotto ogni file nel file browser. Segue le regole SimpleDateFormat di Android, con l\'aggiunta di FS per mostrare le dimensioni del file. Lasciare vuoto per usare il formato predefinito per il tuo locale.\n\nEsempio di input:\nFS yyyy MMM dd hh:mm:ss aa\nFormato di output:\n30KB 2020 Mar 20 11:24:52 PM</string>
     <string name="loading_default_value">Caricamento valore predefinito</string>
     <string name="file_settings">Impostazioni file</string>
     <string name="search_and_replace">Cerca / Sostituisci</string>
-    <string name="search_for">Cerca</string>
+    <string name="search_for">Cerca per</string>
     <string name="replace_with">Sostituisci con</string>
     <string name="replace_once">Sostituisci (1)</string>
     <string name="replace_all">Sostituisci tutto</string>
     <string name="matches">Corrispondenze</string>
     <string name="search_replace_pattern_error_message">Errore di ricerca o sostituzione.</string>
-    <string name="backup_settings">Backup impostazioni</string>
+    <string name="backup_settings">Impostazioni di backup</string>
     <string name="restore_settings">Ripristina impostazioni</string>
     <string name="failed_to_create_backup">Impossibile creare il backup</string>
     <string name="export_settings_to_json_file">Esporta le impostazioni in un file json</string>
@@ -406,7 +406,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="stop_search_after_first_match">Interrompi la ricerca dopo la prima corrispondenza</string>
     <string name="regex_can_not_be_compiled">La regex non può essere compilata</string>
     <string name="keep_both">Mantieni entrambi</string>
-    <string name="skip">Salta</string>
+    <string name="skip">Ignora</string>
     <string name="overwrite">Sovrascrivere</string>
     <string name="keep_both_all">Mantieni entrambi (tutti)</string>
     <string name="skip_all">Salta (Tutti)</string>
@@ -426,7 +426,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="due_today">Scade oggi</string>
     <string name="due_future">Scadenza in futuro</string>
     <string name="completed">Completato</string>
-    <string name="match_any">Corrisponde a qualsiasi</string>
+    <string name="match_any">Trova alcuni</string>
     <string name="match_all">Corrisponde tutto</string>
     <string name="dynamic_notebook_root_links">Ricerca dinamica della radice del notebook</string>
     <string name="search_dynamically_for_notebook_root">Per seguire i collegamenti wiki, cerca dinamicamente il file notebook.zim per identificare la directory radice per il notebook corrente. Spunta questa opzione se usi più notebook zim o la directory del notebook impostata nell\'app non corrisponde al tuo notebook zim.</string>
