[ci skip] Update translations (Filipino)

--- a/app/src/main/res/values-fil/strings.xml
+++ b/app/src/main/res/values-fil/strings.xml
@@ -202,6 +202,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="bottom">Ibaba</string>
     <string name="center">Gitna</string>
     <string name="textaction_spacing">Espasyo ng text action</string>
+    <string name="horizontal_space_between_textactions">Espasyo sa pagitan ng mga text action button</string>
     <string name="center_text">Igitna ang teksto</string>
     <string name="edit_text_in_center_of_screen">Baguhin ang teksto sa gitna ng screen</string>
     <string name="clipboard">Clipboard</string>
@@ -242,6 +243,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="math">Matematika</string>
     <string name="table_of_contents">Talaan ng nilalaman</string>
     <string name="miscellaneous">Sari-sari</string>
+    <string name="textaction">Text action</string>
+    <string name="textactions">Mga text action</string>
     <string name="prefer_view">Mas gustong view</string>
     <string name="no_calendar_app_is_installed">Walang naka-install na app na kalendaryo!</string>
     <string name="popular_documents">Mga popular na dokumento</string>
@@ -287,6 +290,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="notebook_is_the_home_of_your_files">Ang Notebook ay ang folder na nilo-load ng Markor sa file brower sa kada magbubukas ang app. Ito ang home folder ng iyong mga file.</string>
     <string name="quicknote_is_the_fastest_option_to_write_down_notes">Ang Quicknote ay ang pinakamabilis na opsyon para magsulat ng mga tala. Ito ay isang file sa format na Markdown na default na nakalagay sa &gt;Notebook/QuickNote.md&lt;, maari kang magtakda ng custom na filepath sa mga pagsasaayos.</string>
     <string name="todo_is_the_easiest_way_">Pamahalaan ang iyong mga gawain sa ToDo. Ito ay isang file sa format na todo.txt na default na nakalagay sa &gt;Notebook/todo.txt&lt;, maari kang magtakda ng custom ng filepath sa mga pagsasaayos.</string>
+    <string name="navigationbar_color">Kulay ng navigation bar</string>
     <string name="black">Itim</string>
     <string name="white">Puti</string>
     <string name="view">View</string>
