--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,6 +133,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="create_note" needed="false">Create Note</string>
     <string name="special_documents" needed="false">Special documents</string>
     <string name="keep_screen_on" needed="false">Keep screen on</string>
+    <string name="privacy_mode_on" needed="false">Enable privacy mode</string>
     <string name="back_to_previous_folder" needed="false">Back to previous folder</string>
     <string name="app_settings" needed="false">App Settings</string>
     <string name="editor_settings" needed="false">Editor Settings</string>
