--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -105,6 +105,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="create_note" needed="false">ନୋଟ୍ ସୃଷ୍ଟି କରନ୍ତୁ</string>
     <string name="special_documents" needed="false">ବିଶେଷ ଡକ୍ୟୁମେଣ୍ଟ୍</string>
     <string name="keep_screen_on" needed="false">ସ୍କ୍ରିନ୍ ସଚଳ ରଖନ୍ତୁ</string>
+    <string name="disallow_screenshots">ସ୍କ୍ରିନସଟ୍ ନେବା ଅଗ୍ରାହ୍ୟ କରନ୍ତୁ</string>
     <string name="back_to_previous_folder" needed="false">ପୂର୍ବ ଫୋଲ୍ଡରକୁ ଫେରନ୍ତୁ</string>
     <string name="app_settings" needed="false">ଆପ୍ ସେଟିଂସ୍</string>
     <string name="editor_settings" needed="false">ସମ୍ପାଦକ ସେଟିଂସ୍</string>
