--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -22,6 +22,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="file_already_exists_overwerite">ଫାଇଲ୍ ଆଗରୁ ବିଦ୍ୟମାନ ଅଛି, ନବଲିଖନ କରିବେ କି?</string>
     <string name="browse_filesystem">ଫାଇଲ୍ ସିଷ୍ଟମ୍ ବ୍ରାଉଜ୍ କରନ୍ତୁ</string>
     <string name="title">ଆଖ୍ୟା</string>
+    <string name="empty_directory">ଖାଲି ଡିରେକ୍ଟୋରୀ</string>
     <string name="enter_name_of_folder">ଆପଣଙ୍କ ଫୋଲ୍ଡରର ନାମ ପ୍ରବେଶ କରନ୍ତୁ</string>
     <string name="create_folder">ଫୋଲ୍ଡର୍ ସୃଷ୍ଟି କରନ୍ତୁ</string>
     <string name="create_new_document">ନୂତନ ଡକ୍ୟୁମେଣ୍ଟ୍ ସୃଷ୍ଟି କରନ୍ତୁ</string>
