--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -126,6 +126,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="create_note" needed="false">ایجاد یادداشت</string>
     <string name="special_documents" needed="false">مطالب ویژه</string>
     <string name="keep_screen_on" needed="false">روشن نگه داشتن صفحه نمایش</string>
+    <string name="disallow_screenshots">Disallow screenshots</string>
     <string name="back_to_previous_folder" needed="false">بازگشت به پوشه قبلی</string>
     <string name="app_settings" needed="false">تنظیمات برنامه</string>
     <string name="editor_settings" needed="false">تنظیمات ویرایشگر</string>
