--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -327,7 +327,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="experimental_features">实验功能</string>
     <string name="tools">工具</string>
     <string name="reading">正在读取</string>
-    <string name="read">只读</string>
+    <string name="read">读取</string>
     <string name="table">表格</string>
     <string name="how_much_columns_press_table_button_long_to_start_table">需要多少列？长按表格按钮来新建一个表格 (插入表头) ，短按以添加一行。</string>
     <string name="example_of_a_markdown_table">Markdown 表格示例</string>
@@ -349,7 +349,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_6">6 级标题</string>
     <string name="bold">粗体</string>
     <string name="italic">斜体</string>
-    <string name="highlighted">高亮</string>
+    <string name="highlighted">高亮的</string>
     <string name="strikeout">删除线</string>
     <string name="inline_code">行内代码</string>
     <string name="horizontal_line">水平线</string>
